<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bo.com.innovasoft.maskotas.Crear_Mascotas">

    <ImageView
        android:id="@+id/fotomascota"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:contentDescription="@string/fotomascota"
        app:srcCompat="@drawable/mascotas"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btnsubirimagenperro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_marginTop="121dp"
        android:hint="@string/cargarimagen"
        android:layout_alignTop="@+id/fotomascota"
        android:layout_centerHorizontal="true"
        />

        <EditText
        android:id="@+id/txtnombremascota"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nombremascoa"
        android:layout_below="@+id/btnsubirimagenperro"
        android:layout_centerHorizontal="true"/>

        <RadioButton
        android:id="@+id/rbgato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Gato"
        android:layout_below="@+id/txtnombremascota"
        android:layout_centerHorizontal="true"/>

        <RadioButton
        android:id="@+id/rbtperro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Perro"
        android:layout_below="@+id/txtnombremascota"
        android:layout_alignStart="@+id/txtnombremascota"/>

        <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/rbtperro"
        android:layout_below="@+id/rbgato"
        android:hint="@string/Raza"
        android:layout_alignEnd="@+id/txtnombremascota"/>

        <EditText
        android:id="@+id/txtfechanacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        android:maxLines="1"
        android:hint="@string/FechaNacimiento"
        android:layout_below="@+id/autoCompleteTextView"
        android:layout_alignStart="@+id/autoCompleteTextView"
        android:layout_alignEnd="@+id/autoCompleteTextView"/>

        <EditText
        android:id="@+id/txtesterelizado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtfechanacimiento"
        android:layout_below="@+id/txtfechanacimiento"
        android:hint="@string/Esterilizado"
        android:ems="10"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/txtdatosveterinario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/DatosdeVeterinario"
        android:layout_below="@+id/txtesterelizado"
        android:layout_alignStart="@+id/txtesterelizado" />

    <Button
        android:id="@+id/btnguardar"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/guardar"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_below="@+id/txtdatosveterinario"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"/>

</RelativeLayout>
